[gd_scene load_steps=5 format=3 uid="uid://ut3fdv24ri2s"]

[ext_resource type="Script" path="res://Scene/Title/Title.gd" id="1_ncm4j"]
[ext_resource type="Texture2D" uid="uid://q8qy5duorgrb" path="res://Graphic/Pictures/Tower1.png" id="2_el2av"]
[ext_resource type="PackedScene" uid="uid://b816ijqipsyye" path="res://Scene/Common/UI/Window/WindowFrame.tscn" id="3_kurs2"]
[ext_resource type="PackedScene" path="res://Scene/Common/UI/Window/WindowItem.tscn" id="4_ryn7q"]

[node name="Title" type="Node2D"]
script = ExtResource("1_ncm4j")

[node name="BGM" type="AudioStreamPlayer" parent="."]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.56863, 1.15385)
texture = ExtResource("2_el2av")
centered = false

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 592.0
offset_top = 416.0
offset_right = 690.0
offset_bottom = 532.0
size_flags_horizontal = 4
size_flags_vertical = 8
metadata/_edit_group_ = true

[node name="WindowFrame" parent="Menu" instance=ExtResource("3_kurs2")]
layout_mode = 0
offset_right = 98.0
offset_bottom = 116.0

[node name="MarginContainer" type="MarginContainer" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="StartButton" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource("4_ryn7q")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
text = "开始游戏"

[node name="ContinueButton" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource("4_ryn7q")]
unique_name_in_owner = true
layout_mode = 2
text = "继续游戏"

[node name="OptionsButton" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource("4_ryn7q")]
unique_name_in_owner = true
layout_mode = 2
text = "选项"

[node name="ExitButton" parent="Menu/MarginContainer/VBoxContainer" instance=ExtResource("4_ryn7q")]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartButton")
text = "退出"
